MAR-1707 fixed link on Careers page & updated tests

--- a/client/locales/ru.json
+++ b/client/locales/ru.json
@@ -27,7 +27,7 @@
     "section-3": {
       "title": "Устойчивая инженерная культура",
       "description": "Mad Devs создает пространство, в котором команды могут устойчиво и быстро развиваться, внедряя в работу самые <span class='yellow'>современные технологии и лучшие практики.</span>",
-      "list": "Code review и тестирование, Автоматизированное CI/CD, Внутренние бойлерплейты и открытый исходный код, Постоянно обновляемая документация"
+      "list": "Code review и тестирование, Автоматизированное CI/CD, Внутренние бойлерплейты и открытый исходный код, Постоянно обновляемая документация."
     },
     "section-4": {
       "title": "Работа по Agile ",
