MAR-2192 changed localization of position post to russian only, prepared redirect. Changed HR manager.

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -72,7 +72,7 @@
     "detailPage": {
       "btn": "Apply now",
       "hr": {
-        "name": "Hi, I'm Diana.",
+        "name": "Hi, I'm Ekaterina.",
         "description": "Applying for jobs should be easy. I am here to simplify the hiring process and set you up for success. Feel free to send me a message on Telegram."
       },
       "form": {
