--- a/client/locales/ru.json
+++ b/client/locales/ru.json
@@ -72,7 +72,7 @@
     "detailPage": {
       "btn": "Написать нам",
       "hr": {
-        "name": "Привет, меня зовут Диана.",
+        "name": "Привет, меня зовут Екатерина.",
         "description": "Мы в Mad Devs считаем, что процедура отклика на вакансию должна быть максимально простой. И я здесь именно для этого. Отправьте мне сообщение на почту"
       },
       "form": {
