MAR-2698. changed text in CTA banner and added some styles

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -65,7 +65,7 @@
     },
     "section-9": {
       "title": "Can’t see your next role?",
-      "description": "If you don’t see a suitable vacancy, but you are sure we’re meant to be, drop us a line.",
+      "description": "If you don’t see a suitable vacancy, but you are sure we're meant to be together, drop us a line.",
       "hr": "Daria Utesheva",
       "btn": "Write Us"
     },
