MAR-3661. Changed description text

--- a/client/locales/en.json
+++ b/client/locales/en.json
@@ -73,7 +73,7 @@
       "btn": "Apply now",
       "hr": {
         "name": "Hi, I'm Ekaterina.",
-        "description": "Applying for jobs should be easy. I am here to simplify the hiring process and set you up for success. Feel free to send me a message on Telegram."
+        "description": "Applying for jobs should be easy. I am here to simplify the hiring process and set you up for success. Feel free to send me a message via e-mail."
       },
       "form": {
         "name": "Hello, my name is",
